# RecPlace-Nikolay-Ryaskov

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5118899c7aab_add_contraist.py  818648ce8dc8_make_description_longer.py  cf8f394cc076_do_something.py  ff60c9d4eccf_add_users_movies_m2m_favorites.py
auth/: auth_handlers.py  depends.py  facade.py  router.py  schemas.py  services.py
core/: container.py  database.py  environment.py  exception_handlers.py  exceptions.py  logger.py  repositories.py  schemas.py  unit_of_work.py
dev_tools/: .env  Dockerfile  docker-compose.yml
movies/: exceptions.py  facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
users/: exceptions.py  facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
